# config/routesValues.js
@@ -53,4 +53,6 @@ exports.routeValues = {
   "/communication-tbs/application-master/patch": "c2a04e70f16541f5b52f1b0803ee46d3",
   "/communication-tbs/update": "c2a04e70f16541f5b52f1b0803ee46d3",
   "/communication-tbs/getContentData": "c2a04e70f16541f5b52f1b0803ee46d3",
+  "/communication-tbs/listing": "c2a04e70f16541f5b52f1b0803ee46d3",
+  "/communication-tbs/create": "c2a04e70f16541f5b52f1b0803ee46d3",
 };
